added meta tag for different screens

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
+
 <html class="no-js" lang="en">
 <head>
 
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <title>Designfullyours</title>
     <meta name="description" content="">
     <meta name="author" content="">
