updated font size f heading

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 
                 <h1>
                 A multidisciplinary designer who believes that design is a medium of communication, a solution to a problem.
-                <br><span style="color:#f9861a ">I don’t love to design, I live to design</span>
                 </h1>
+                <span style="font-size: 35px;color:#f9861a ">I don’t love to design, I live to design</span>
 
                 <!-- <ul class="hero-social">
                     <li>
