updated text size

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <h1>
                 A multidisciplinary designer who believes that design is a medium of communication, a solution to a problem.
                 </h1>
-                <span style="font-size: 21px;white-space: nowrap;color:#f9861a">I don’t love to design, I live to design</span>
+                <span style="font-size: large;color:#f9861a">I don’t love to design, I live to design</span>
 
                 <!-- <ul class="hero-social">
                     <li>
