--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width; initial-scale=0.5, maximum-scale=0.5, minimum-scale=0.5; " />
+
+
+
     <title>Designfullyours</title>
     <meta name="description" content="">
     <meta name="author" content="">
