--- a/index.html
+++ b/index.html
@@ -97,9 +97,10 @@
 
     <!-- hero
     ================================================== -->
-    <section id="hero" class="s-hero target-section" data-parallax="scroll" data-image-src="images/hero-bg-3000.png" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
+    <section>
 
-        <div class="row hero-content">
+        <div  id="hero" class="s-hero target-section" data-parallax="scroll"  data-image-src="images/hero-bg-3000.png" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
+         <div class="row hero-content">
 
             <div class="column large-full">
 
@@ -121,10 +122,9 @@
                 </ul>  -->
                 <!-- end hero-social -->
 
-            </div> 
-
+            </div>
         </div> <!-- end hero-content -->
-
+    </div>
         <div class="hero-scroll">
             <a href="#about" class="scroll-link smoothscroll">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 24l-8-9h6v-15h4v15h6z"/></svg>
