--- a/index.html
+++ b/index.html
@@ -62,11 +62,7 @@
     <header class="s-header">
       <div class="header-logo">
         <a href="index.html">
-          <img
-            src="images/logo_new.png"
-            alt="Homepage"
-            style="width: 70px; height: 90px !important"
-          />
+          <img src="images/logo.png" alt="Homepage" />
         </a>
       </div>
 
@@ -506,17 +502,12 @@
             <div class="folio-item__thumb">
               <a
                 class="folio-item__thumb-link"
-                href="images/portfolio/gallery/1.png"
+                href="indianadvertise.html"
                 data-size="1050x700"
               >
-                <img
-                  src="images/portfolio/1.png"
-                  srcset="
-                    images/portfolio/1.png    1x,
-                    images/portfolio/1@2x.png 2x
-                  "
-                  alt=""
-                />
+                <a href="indianadvertise.html">
+                  <img src="images/portfolio/1.png" srcset="" alt="" />
+                </a>
               </a>
             </div>
             <div class="folio-item__info">
@@ -547,17 +538,15 @@
             <div class="folio-item__thumb">
               <a
                 class="folio-item__thumb-link"
-                href="images/portfolio/gallery/2.png"
+                href="hotstar.html"
                 data-size="1050x700"
               >
-                <img
-                  src="images/portfolio/2.png"
-                  srcset="
-                    images/portfolio/2.png    1x,
-                    images/portfolio/2@2x.png 2x
-                  "
-                  alt=""
-                />
+                <a href="hotstar.html"
+                  ><img
+                    src="images/portfolio/2.png"
+                    srcset=""
+                    alt="Space Design"
+                /></a>
               </a>
             </div>
             <div class="folio-item__info">
@@ -585,17 +574,15 @@
             <div class="folio-item__thumb">
               <a
                 class="folio-item__thumb-link"
-                href="images/portfolio/gallery/3.png"
+                href="reimagine.html"
                 data-size="1050x700"
               >
-                <img
-                  src="images/portfolio/3.png"
-                  srcset="
-                    images/portfolio/3.png    1x,
-                    images/portfolio/3@2x.png 2x
-                  "
-                  alt=""
-                />
+                <a href="reimagine.html"
+                  ><img
+                    src="images/portfolio/3.png"
+                    srcset=""
+                    alt="Space Design"
+                /></a>
               </a>
             </div>
             <div class="folio-item__info">
@@ -623,17 +610,12 @@
             <div class="folio-item__thumb">
               <a
                 class="folio-item__thumb-link"
-                href="images/portfolio/gallery/4.png"
+                href="isl.html"
                 data-size="1050x700"
               >
-                <img
-                  src="images/portfolio/4.png"
-                  srcset="
-                    images/portfolio/4.png    1x,
-                    images/portfolio/4@2x.png 2x
-                  "
-                  alt=""
-                />
+                <a href="isl.html"
+                  ><img src="images/portfolio/4.png" srcset="" alt="ISL Trophy"
+                /></a>
               </a>
             </div>
             <div class="folio-item__info">
@@ -659,16 +641,14 @@
             <div class="folio-item__thumb">
               <a
                 class="folio-item__thumb-link"
-                href="images/portfolio/gallery/5.png"
+                href="football.html"
                 data-size="1050x700"
               >
+                <a href="football.html"></a>
                 <img
                   src="images/portfolio/5.png"
-                  srcset="
-                    images/portfolio/5.png    1x,
-                    images/portfolio/5@2x.png 2x
-                  "
-                  alt=""
+                  srcset=""
+                  alt="Dawn of Footballing Nation"
                 />
               </a>
             </div>
@@ -698,17 +678,12 @@
             <div class="folio-item__thumb">
               <a
                 class="folio-item__thumb-link"
-                href="images/portfolio/gallery/6.png"
+                href="hni.html"
                 data-size="1050x700"
               >
-                <img
-                  src="images/portfolio/6.png"
-                  srcset="
-                    images/portfolio/6.png    1x,
-                    images/portfolio/6@2x.png 2x
-                  "
-                  alt=""
-                />
+                <a href="hni.html"
+                  ><img src="images/portfolio/6.png" srcset="" alt="HNI Dinner"
+                /></a>
               </a>
             </div>
             <div class="folio-item__info">
@@ -734,17 +709,15 @@
             <div class="folio-item__thumb">
               <a
                 class="folio-item__thumb-link"
-                href="images/portfolio/gallery/7.png"
+                href="kabbadi.html"
                 data-size="1050x700"
               >
-                <img
-                  src="images/portfolio/7.png"
-                  srcset="
-                    images/portfolio/7.png    1x,
-                    images/portfolio/7@2x.png 2x
-                  "
-                  alt=""
-                />
+                <a href="kabbadi.html"
+                  ><img
+                    src="images/portfolio/7.png"
+                    srcset=""
+                    alt="Kabaddi Auction"
+                /></a>
               </a>
             </div>
 
@@ -771,17 +744,15 @@
             <div class="folio-item__thumb">
               <a
                 class="folio-item__thumb-link"
-                href="images/portfolio/gallery/8.png"
+                href="worldcup.html"
                 data-size="1050x700"
               >
-                <img
-                  src="images/portfolio/8.png"
-                  srcset="
-                    images/portfolio/8.png    1x,
-                    images/portfolio/8@2x.png 2x
-                  "
-                  alt=""
-                />
+                <a href="worldcup.html"
+                  ><img
+                    src="images/portfolio/8.png"
+                    srcset=""
+                    alt="The World Cup"
+                /></a>
               </a>
             </div>
             <div class="folio-item__info">
